--- a/app.css
+++ b/app.css
@@ -50,7 +50,7 @@ typebot-standard { position: relative; z-index: 9999; }
 
 /* Estilo da caixa do input */
 .typebot-input { 
-  max-width: 100%!important; width:100%!important; position: fixed; bottom: 0; align-items: center; 
+  max-width: 100%!important; width:100%!important; position: fixed; bottom: 40px; align-items: center; 
   z-index: 999; right: 0; margin-bottom: 20px; background-color: white; border-radius: 50px; 
   box-shadow: 1 2px 1px -1px rgba(0,0,0,.2); height: 50px; padding-right: 0px!important; 
 }
